public-eks/cbioportal-prod/cellxgene/oauth2-proxy-azure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4180
          protocol: TCP
        args:
        - --provider=azure
        - --http-address=0.0.0.0:4180
        - --cookie-name=_oauth2_proxy_gbm
        - --cookie-domain=.cbioportal.org
        - --cookie-expire=0
        - --cookie-secure=true
        - --reverse-proxy=true
        - --whitelist-domain=.cbioportal.org
        - --email-domain=*
      nodeSelector:
        eks.amazonaws.com/nodegroup: eks-cellxgene
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "eks-cellxgene"
          effect: "NoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy  
  name: oauth2-proxy
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
